# tailwind-palette

./: Cargo.toml  README.md
examples/: basic.rs
src/: colors.rs  lib.rs
src/utils/: colors.rs  generator.rs  mod.rs
