[package]
name = "tailwind-palette"
version = "0.0.1"
edition = "2021"
license = "MIT"
# authors = []
# include = ["/src", "/examples", "/LICENSE", "/README.md"]
# repository = "https://github.com/<username>/tailwind-palette/tree/main"
# keywords = ["tailwind", "palette", "color", "rgb", "hex"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# chroma-rust = { path = "../chroma-rust" }
chroma-rust = "0.1.5"
deltae = "0.3.0"
rspc = "0.1.2"
serde = "1.0.152"
serde_json = "1.0.91"
